sway: update for_window rule for Firefox Sharing Indicator
new rule also applies to Firefox Developer Edition (and possibly all the
other Firefox versions)

--- a/config/sway/config
+++ b/config/sway/config
@@ -229,7 +229,7 @@ default_floating_border none
 for_window [app_id="kitty"] border normal 2
 
 # prevent firefox from stealing workspace for "sharing indicator" window
-for_window [app_id="firefox" title="Firefox — Sharing Indicator"] kill
+for_window [app_id="firefox.*" title="Firefox.*— Sharing Indicator"] kill
 
 # inhibit idle when an application is fullscreen
 for_window [class="^.*"] inhibit_idle fullscreen
