--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,7 @@
                   fzf
                   gammastep
                   git
+                  git-delta
                   glow
                   gnome-disk-utility
                   grim
