setup: add mpv to install list

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,8 @@
                   kdeconnect
                   kitty
                   mako
+                  mpv
+                  mpv-mpris
                   neovim
                   nm-connection-editor
                   noto-fonts
