--- a/config/i3/config
+++ b/config/i3/config
@@ -33,7 +33,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
 #bindsym $mod+Return exec terminology
-bindsym $mod+Return exec gnome-terminal
+bindsym $mod+Return exec xterm
 
 bindsym $mod+F1 exec i3lock -e -c "000000" -p win
 
