--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
         -
           command: >
                   sudo pacman -S --needed
+                  base-devel
                   bluez
                   bluez-utils
                   brasero
@@ -71,6 +72,7 @@
                   thunar-archive-plugin
                   thunar-media-tags-plugin
                   thunar-volman
+                  vifm
                   waybar
                   wireplumber
                   wl-clipboard
