meta: add nautilus to install list in install.conf.yaml

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -49,6 +49,7 @@
                   mako
                   mpv
                   mpv-mpris
+                  nautilus
                   neovim
                   nm-connection-editor
                   noto-fonts
