--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -77,6 +77,7 @@
                   swayidle
                   swaylock
                   texlab
+                  tmux
                   vifm
                   waybar
                   wireplumber
