tmux: small config fixes

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -54,7 +54,7 @@ bind-key Space select-window -l
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 # set-option -g mouse on
 # Start copy mode when scrolling up
 # bind -n WheelUpPane copy-mode
@@ -69,8 +69,6 @@ set-option -g allow-rename off
 bind-key -T copy-mode-vi 'v' send -X begin-selection # Begin selection in copy mode.
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode
 bind-key -T copy-mode-vi 'y' send -X copy-selection # Yank selection in copy mode
-
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.local/config/tmux/plugins/tpm/tpm'
