tmux: add keybinds for copy and paste on wayland

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -66,9 +66,14 @@ set-window-option -g mode-keys vi
 set-option -g default-shell /bin/zsh
 set-option -g allow-rename off
 
+# copy-paste related stuff
 bind-key -T copy-mode-vi 'v' send -X begin-selection # Begin selection in copy mode.
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode
 bind-key -T copy-mode-vi 'y' send -X copy-selection # Yank selection in copy mode
+
+# binds for copy and paste
+bind C-c run 'tmux save-buffer - | wl-copy'
+bind C-v run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.local/config/tmux/plugins/tpm/tpm'
