tmux: advertise TERM as tmux-256color

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -23,7 +23,7 @@ set -g @tmux-gruvbox 'dark'
 # set -g @plugin 'git@github.com/user/plugin'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -sg escape-time 10
 
 # super useful when using "grouped sessions" and multi-monitor setup
