tmux: make sure Home and End keys are working properly

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -49,6 +49,10 @@ bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
 
+# Make sure Home and End keys are working properly
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
+
 # switch to previous used window
 bind-key Space select-window -l
 
