tmux: set window title for terminal emulator

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -30,6 +30,8 @@ set-option -sg escape-time 10
 setw -g aggressive-resize on
 set -g @continuum-restore 'on'
 
+set -g set-titles on
+
 # Easy split pane commands
 bind v split-window -h -c "#{pane_current_path}"
 bind g split-window -v -c "#{pane_current_path}"
