--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -61,9 +61,12 @@ bind-key Space select-window -l
 # force a reload of the config file
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
-# set-option -g mouse on
+
+set-option -g mouse on
+
 # Start copy mode when scrolling up
 # bind -n WheelUpPane copy-mode
+
 # Scrollback/History limit
 set -g history-limit 100000
 
