--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g prefix C-Space
 bind Space send-prefix
 
 # setup wayland clipboard
-set -s copy-command 'wl-copy'
+set -s copy-command 'wl-copy -p'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -62,7 +62,7 @@ bind-key Space select-window -l
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-set-option -g mouse on
+# set-option -g mouse on
 
 # Start copy mode when scrolling up
 # bind -n WheelUpPane copy-mode
@@ -81,8 +81,8 @@ bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in cop
 bind-key -T copy-mode-vi 'y' send -X copy-selection # Yank selection in copy mode
 
 # binds for copy and paste
-bind C-c run 'tmux save-buffer - | wl-copy'
-bind C-v run 'tmux set-buffer "$(wl-paste)"; tmux paste-buffer'
+bind C-c run 'tmux save-buffer - | wl-copy -p'
+bind C-v run 'tmux set-buffer "$(wl-paste -p)"; tmux paste-buffer'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.local/config/tmux/plugins/tpm/tpm'
