swaylock: add an easter egg to lock screen

--- a/config/swaylock/config
+++ b/config/swaylock/config
@@ -3,6 +3,8 @@ ignore-empty-password
 show-keyboard-layout
 indicator-caps-lock
 color=000000FF
+image=rickroll.png
+scaling=center
 line-uses-ring
 indicator-radius=100
 indicator-thickness=15
