meta: add cliphist to default install list

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,6 +21,7 @@
                   brasero
                   brightnessctl
                   clang
+                  cliphist
                   ctags
                   curl
                   ffmpeg
