--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -99,7 +99,7 @@ dpi-aware=yes
 # long-press-delay=400
 
 [colors]
-# alpha=1.0
+alpha=0.85
 # background=242424
 # foreground=ffffff
 # flash=7f7f00
