conf/foot: change background color

--- a/config/foot/foot.ini
+++ b/config/foot/foot.ini
@@ -100,7 +100,7 @@ dpi-aware=yes
 
 [colors]
 alpha=0.85
-# background=242424
+background=000000
 # foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
