meta: use uwsm when launching swaywm for graphical session

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -73,6 +73,7 @@
                   swayidle
                   swaylock
                   tmux
+                  uwsm
                   vifm
                   waybar
                   wlr-randr
