--- a/systemd-services/sway-headless.service
+++ b/systemd-services/sway-headless.service
@@ -5,7 +5,7 @@ After=network-online.target
 
 [Service]
 Type=simple
-ExecStart=sway-remote-run
+ExecStart=/usr/bin/sh -c "PATH=~/.local/sbin:${PATH} sway-remote-run"
 
 [Install]
 WantedBy=default.target
