--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -3,8 +3,9 @@
 	"position": "top",
 	"include": [
 		"~/.config/waybar/default-modules.jsonc",
+		"~/.local/config/waybar/local-modules.jsonc"
 	],
 	"modules-left": ["sway/mode", "sway/workspaces", "mpris"],
 	"modules-center": ["idle_inhibitor", "clock"],
-	"modules-right": ["sway/language", "network", "temperature", "load", "wireplumber", "battery", "tray"],
+	"modules-right": ["sway/language", "network", "temperature", "load", "wireplumber", "battery", "tray"]
 }
