conf/waybar: disable scroll wraparound and enable bar scroll for sway workspaces module

--- a/config/waybar/default-modules.jsonc
+++ b/config/waybar/default-modules.jsonc
@@ -85,6 +85,8 @@
 	"sway/workspaces": {
 		"all-outputs": false,
 		"disable-scroll": false,
+		"disable-scroll-wraparound": true,
+		"enable-bar-scroll": true,
 		"format": "{name}"
 	},
 	"tray": {
