config/sway: replace polkit-gnome with polkit-kde-agent

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -65,7 +65,7 @@
                   pipewire-pulse
                   pipewire-jack
                   playerctl
-                  polkit-gnome
+                  polkit-kde-agent
                   python-pynvim
                   ripgrep
                   slurp
